--- a/src/app/post-page/post-page.component.html
+++ b/src/app/post-page/post-page.component.html
@@ -1,1 +1,19 @@
-<p>post-page works!</p>
+<div class="post">
+  <div class="header">
+    <h1>Post title</h1>
+
+    <button routerLink="/" class="btn btn-link">На главную</button>
+  </div>
+
+  <div class="info">
+    <strong>Тут автор</strong>
+    <small>12.09.2019</small>
+  </div>
+
+  <div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos incidunt voluptas? A architecto debitis distinctio dolores eius excepturi expedita facere illo illum impedit maxime, mollitia natus nemo numquam officia optio perferendis porro qui quos ratione recusandae repellendus saepe tempora veritatis voluptatibus. Dicta doloribus eius esse inventore repellat saepe tempore.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos incidunt voluptas? A architecto debitis distinctio dolores eius excepturi expedita facere illo illum impedit maxime, mollitia natus nemo numquam officia optio perferendis porro qui quos ratione recusandae repellendus saepe tempora veritatis voluptatibus. Dicta doloribus eius esse inventore repellat saepe tempore.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos incidunt voluptas? A architecto debitis distinctio dolores eius excepturi expedita facere illo illum impedit maxime, mollitia natus nemo numquam officia optio perferendis porro qui quos ratione recusandae repellendus saepe tempora veritatis voluptatibus. Dicta doloribus eius esse inventore repellat saepe tempore.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos incidunt voluptas? A architecto debitis distinctio dolores eius excepturi expedita facere illo illum impedit maxime, mollitia natus nemo numquam officia optio perferendis porro qui quos ratione recusandae repellendus saepe tempora veritatis voluptatibus. Dicta doloribus eius esse inventore repellat saepe tempore.</p>
+  </div>
+</div>
