Finished ch11: Storage data

--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -44,7 +44,7 @@
       >
         Пароль должен быть не менее
         {{form.get('password').errors.minlength.requiredLength}}
-        символов.Сейчас символов: 
+        символов.Сейчас символов:
         {{form.get('password').errors.minlength.actualLength}}
       </small>
     </div>
@@ -53,7 +53,7 @@
   <button
     type="submit"
     class="btn btn-primary"
-    [disabled]="form.invalid"
+    [disabled]="form.invalid || submitted"
   >Войти</button>
 
 </form>
